# TradeVision

./: .clinerules  .env  .env.example  .env.ib-gateway  AUDIT_STRATEGIES_DETECTION.md  CORRECTIONS_ROADMAP.md  PHASE_1.2_PLAN_EXECUTION.md  README.md  STATUS.md  TESTING_IB_INTEGRATION.md  app-logs.txt  docker-compose.yml  eslint.config.js  install-vibe.sh  launch-dev.sh  old_ActiveTradesList.vue  old_useLivePrices.js  old_useRocketState.js  package-lock.json  package.json  setup-ib-docker.sh  start-new-project.sh  task.md  test_ibkr.csv  vibe  vite.config.js
.vibe/: config.toml  metrics.json
.vibe.bak/: config.toml  metrics.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: backup.rs  mod.rs  tws_socket.rs
src-tauri/src/modules/ib_gateway/: auth.rs  client.rs  mod.rs  parser.rs
src/components/: AppSidebar.vue  AppTitlebar.vue  FlexQueryAnalytics.vue  FlexQueryConfig.vue  FlexTradesTable.vue  IBCredentialsModal.vue  KasperAcademy.vue  PerformanceChart.vue  RocketAcademy.vue  TradeForm.vue  TradeList.vue  flex-query-analytics.css  flex-trades-table.css
src/composables/: rocketActions.js  rocketStore.js  useAnalytics.js  useDashboardLogic.js  useFlexQueries.js  useHistoriqueRefresh.js  useIBSync.js  useIBSyncScheduler.js  useImportLogic.js  useKasperActions.js  useKasperState.js  useKasperStore.js  useLivePrices.js  useMarketData.js  useOpenPositions.js  useRocketState.js  useTradeDatabase.js  useTradeGrouping.js
src/utils/: db.js  exporters.js  (+7 more)
(+114 files in other folders)
